# OGL

./: .gitignore  CMakeLists.txt  LICENSE  README.md
code/: CMakeLists.txt
code/include/: GLInterface.hpp  log.hpp  ogl.hpp
code/include/wrappers/: dataBuffer.hpp  framebuffer.hpp  program.hpp  shader.hpp  variable.hpp  window.hpp
code/src/: CMakeLists.txt  GLInterface.cpp  log.cpp  ogl.cpp
code/src/wrappers/: CMakeLists.txt  dataBuffer.cpp  framebuffer.cpp  program.cpp  shader.cpp  variable.cpp  window.cpp
code/wrappers/: CMakeLists.txt
code/wrappers/include/: dataBuffer.hpp  program.hpp  shader.hpp  variable.hpp  window.hpp
code/wrappers/src/: dataBuffer.cpp  program.cpp  shader.cpp  variable.cpp  window.cpp
examples/: 01-BasicTriangle.cpp  02-RotatingCube.cpp  CMakeLists.txt  constants.hpp
examples/shaders/01/: fragment.glsl  vertex.glsl
examples/shaders/02/: fragment.glsl  vertex.glsl
tests/: CMakeLists.txt  dataBuffer.cpp  logging.cpp  program.cpp  setup.cpp  shader.cpp  variable.cpp
tests/mocks/: GLInterfaceMock.hpp  dataBufferMock.hpp  objectFactoryMock.hpp  shaderMock.hpp
